white space problem in white-space of expanded table rows fixed

--- a/silk-workbench/silk-workbench-core/public/mdl-adjustments.css
+++ b/silk-workbench/silk-workbench-core/public/mdl-adjustments.css
@@ -388,6 +388,8 @@ th.rule-actions {
    so we need to use an inner div */
 .di-rule__expanded-content div {
   overflow: hidden;
+  white-space: normal;
+  word-wrap: break-word;
 }
 
 #ruleTable .mdl-textfield {
